battlemap restart game fixed on IE11

--- a/scss/pages/battle_map_1.scss
+++ b/scss/pages/battle_map_1.scss
@@ -51,6 +51,20 @@
   width: 140px;
 }
 
+.battle-map-1-start-here-text-container {
+  animation: battle-map-1-start-here-text-container 0.6s forwards;
+  animation-timing-function: ease-out;
+  animation-delay: 1.7s;
+  opacity: 0;
+  position: absolute;
+  z-index: 2;
+}
+
+@keyframes battle-map-1-start-here-text-container {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 .battle-map-1-start-here-text {
   animation: battle-map-1-pulse-text 0.3s infinite;
   animation-delay: 1.7s;
@@ -166,21 +180,10 @@
   animation-timing-function: ease-out;
   animation-delay: 1.7s;
   opacity: 0;
+  position: absolute;
 }
 
 @keyframes battle-map-1-wavestart-container {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-}
-
-.delayed-animation {
-  animation: delayed-animation 0.6s forwards;
-  animation-timing-function: ease-out;
-  animation-delay: 1.7s;
-  opacity: 0;
-}
-
-@keyframes delayed-animation {
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
